docs/dev/v4/learn/glossary/README.md
---
description: >-
  Frequently used terms to describe ideas and mechanisms
  within the Juicebox protocol.
---

# Glossary

| Term                 | Preview                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| -------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Project**          | <p>TLDR: A Juicebox project is an NFT (ERC-721) representing ownership and permissions for managing project-specific transactions.</p><p>Each Juicebox project's 721 is managed in the <a href="/v4/core/JBProjects.md"><code>JBProjects</code></a> contract. The owner of this NFT is specified when the project is being created. Ownership over this NFT is used to enforce permissions needed to access several project-oriented transactions. Like any other NFT, ownership can be transferred from the original owner to any other address, such as a multi-sig wallet, voting contract, or burn address.</p>[Learn more](/docs/dev/v4/learn/glossary/project.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| **Rulesets**    | <p>TLDR: A sequence of configurable, time-locked rules that define how a Juicebox project operates over time.</p><p>A project is expressed in terms of rulesets. A ruleset outlines the time-locked rules according to which a project wishes to operate. It is represented as a <a href="/v4/api/core/structs/JBRuleset"><code>JBRuleset</code></a> data structure, and managed by the <a href="/v4/core/JBRulesets.md"><code>JBRulesets</code></a> contract.</p>[Learn more](/docs/dev/v4/learn/glossary/ruleset.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| **Tokens**           | <p>TLDR: Tokens minted for a project based on its ruleset, optionally issued as ERC-20 tokens or integrated with a custom token.</p><p>The Juicebox protocol keeps track of tokens for each project. When a payment is made to a project, the protocol mints tokens for a specified beneficiary according to the project's current ruleset.</p><p>Tokens are managed in the <a href="/v4/core/JBTokens.md"><code>JBTokens</code></a> contract through its controller. Projects can optionally call their controller's <a href="/v4/api/core/JBController.md#deployerc20For"><code>deployERC20For(...)</code> </a>transaction to issue an ERC-20 to represent their token. Once issued, anyone with a project's tokens can claim them from the protocol's internal accounting mechanism into their wallet to use around Web3.</p><p>Projects can also bring their own token, so long as it adheres to the <a href="/v4/api/core/interfaces/IJBToken.md"><code>IJBToken</code></a> interface and uses 18 decimal fixed point accounting.</p>[Learn more](/docs/dev/v4/learn/glossary/tokens.md)                                                                                                                                                                                                                                                    |
| **Surplus**         | <p>TLDR: Funds exceeding a project's payout limit, reclaimable by its community through token cash-outs.</p><p>The <a href="/v4/api/core/JBFundAccessLimits.md"><code>JBFundAccessLimits</code></a> contract has a <a href="/v4/api/core/JBFundAccessLimits.md#payoutlimitof"><code>payoutLimitOf(...)</code></a> property which denotes how much funds a project can distribute to its preprogrammed payout splits during each ruleset. Any funds in the project in excess of the current distribution limit is considered surplus. A project's surplus can be reclaimed by its community by cashing out tokens. A project can specify funds or assets held outside of Juicebox contracts as surplus by attaching a <a href="/v4/api/core/interfaces/IJBRulesetDataHook.md"><code>IJBRulesetDataHook</code></a> to its rulesets.</p>[Learn more](/docs/dev/v4/learn/glossary/surplus.md)                                                                                                                                                                                                                                                                                                                   |
| **Weight cut percent**    | <p>TLDR: Defines how a project's token distribution changes over time by reducing its weight in each ruleset cycle.</p><p><a href="/v4/api/core/structs/JBRuleset.md"><code>JBRuleset</code></a> data structures have a <code>weight</code> property that is automatically derived from multiplying the <code>weight</code> of the previous ruleset by the <code>weightCutPercent</code> of the previous cycle. The weight property is then be used to determine how many project tokens are distributed per unit of payment received during the ruleset, or for any other functionality implemented through a ruleset's data hook and pay hook. A project can also customize its ruleset's weight manually.</p>[Learn more](/docs/dev/v4/learn/glossary/weight-cut-percent.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| **Cash out tax rate**  | <p>TLDR: A project's configurable tax rate on surplus funds when tokens are cashed out.</p><p><a href="/v4/api/core/structs/JBRuleset.md"><code>JBRuleset</code></a> data structures configured through the <a href="/v4/api/core/JBController.md"><code>JBController</code></a> contract have a <code>cashOutTaxRate</code> metadata property that can be used to determine how much surplus funds can be reclaimed by cashing out project tokens, or for any other functionality implemented in a ruleset's data hook and cash out hook.</p>[Learn more](/docs/dev/v4/learn/glossary/cash-out-tax-rate.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| **Controller** | <p>TLDR: The contract responsible for managing a Juicebox project's core operations, including ruleset configuration, token minting, and splits.</p><p>The Controller is a central contract in the Juicebox protocol that allows project owners to configure and update their project's rulesets, manage token issuance, and control how splits are set. It interacts with other core contracts such as [`JBRulesets`](/docs/dev/v4/api/core/JBRulesets.md), [`JBTokens`](/docs/dev/v4/api/core/JBTokens.md), and [`JBSplits`](/docs/dev/v4/api/core/JBSplits.md) to enforce project logic. Each project must choose a controller, and projects desiring custom behavior can deploy custom controllers to extend or modify how the project works.</p>[Learn more](/docs/dev/v4/learn/glossary/controller.md) |

| **Reserved tokens**  | <p>TLDR: A percentage of newly minted tokens reserved for specific addresses or allocations.</p><p><a href="/v4/api/core/structs/JBRuleset.md"><code>JBRuleset</code></a> data structures configured through the <a href="/v4/api/core/JBController.md"><code>JBController</code></a> contract have a <code>reservedPercent</code> metadata property which specifies the percentage of tokens minted as a result of newly received payments that should be reserved for distribution to preprogrammed reserved token splits.</p>[Learn more](/docs/dev/v4/learn/glossary/reserved-tokens.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| **Splits**           | <p>TLDR: Preprogrammed distributions of funds or tokens to addresses, contracts, or Juicebox projects.</p><p>A Split is used to send a percent of a total amount to a preprogrammed address, Juicebox project, contract that inherits from <a href="/v4/api/core/interfaces/IJBSplitHook.md"><code>IJBSplitHook</code></a>, or sender of the transaction causing the distribution to splits. Splits are represented with <a href="/v4/api/core/structs/JBSplit.md"><code>JBSplit</code></a> data structures, and managed by the <a href="/v4/api/core/JBSplits.md"><code>JBSplits</code></a> contract. A split does not hold information about what is being split, it's simply a structure organizable into groups that maps a receiver to a percentage.</p>[Learn more](/docs/dev/v4/learn/glossary/splits.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| **Split hook**  | <p>TLDR: A contract that processes specific actions when splits are distributed.</p><p>A project can preconfigure splits to be directed to any contract that adheres to <a href="/v4/api/core/interfaces/IJBSplitHook.md"><code>IJBSplitHook</code></a> whose <code>processSplitWith(...)</code> transaction will be called when tokens are distributed.</p>[Learn more](/docs/dev/v4/learn/glossary/split-hook.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| **Ruleset approval hook**           | <p>TLDR: A contract specifying conditions for approving or reconfiguring a project's ruleset.</p><p><a href="/v4/api/core/structs/JBRuleset.md"><code>JBRuleset</code></a> data structures have an an approval hook property which is the address of a contract that adheres to the <a href="/v4/api/core/interfaces/IJBRulesetApprovalHook.md"><code>IJBRulesetApprovalHook</code></a> interface. This contract specifies the conditions that must be met for any proposed ruleset  to take effect.</p><p>An approval hook contract can be written to incorporate strict community review times or voting requirements in order to make ruleset changes, or to simply add a required wait period between when a change is proposed and when it can take effect.</p>[Learn more](/docs/dev/v4/learn/glossary/ruleset-approval-hook.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| **Terminal** | <p>TLDR: A contract managing a project's incoming and outgoing funds, with support for multiple terminals and primary terminal settings.</p><p>A project can be configured to use any contract that adheres to [`IJBTerminal`](/docs/dev/v4/api/core/interfaces/IJBTerminal.md) to manage its inflows and outflows of funds. It can set its terminals using [`JBDirectory.setTerminalsOf(...)`](/docs/dev/v4/api/core/JBDirectory.md#setterminalsof), and if uses many terminals it can set the primary one where other contracts should send funds to projects using [`JBDirectory.setPrimaryTerminalOf(...)`](/docs/dev/v4/api/core/JBDirectory.md#setprimaryterminalof).</p>[Learn more](/docs/dev/v4/learn/glossary/terminal.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| **Data hook**      | <p>TLDR: Custom logic executed during payments or cash-outs, defined in a project's ruleset.</p><p><a href="/v4/api/core/structs/JBRuleset.md"><code>JBRuleset</code></a> data structures configured through the <a href="/v4/api/core/JBController.md"><code>JBController</code></a> contract have a <code>dataHook</code> metadata property which is the address of a contract that adheres to the <a href="/v4/api/core/interfaces/IJBRulesetDataHook.md"><code>IJBRulesetDataHook</code></a> interface.</p><p>Including a data hook allows projects to customize what happens when a payment is attempted to the project during a ruleset, and what happens when a token is attempted to be cashed out during a ruleset.</p>[Learn more](./ruleset-data-hook.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| **Pay hook**      | <p>TLDR: A contract triggered after payments are processed for additional project-defined logic.</p><p>When a project receives a payment, its ruleset's data hook can specify the address of a contract that adheres to the <a href="/v4/api/core/interfaces/IJBPayHook.md"><code>IJBPayHook</code></a> whose <code>afterPayRecordedWith(...)</code> transaction will be called once <a href="/v4/api/core/JBMultiTerminal.md#pay"><code>JBMultiTerminal.pay(...)</code></a> has been executed.</p>[Learn more](/docs/dev/v4/learn/glossary/cash-out-hook.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| **Cash out hook**      | <p>TLDR: A contract triggered when project tokens are cashed out, enabling custom redemption behavior.</p><p>When a project's tokens are being cashed out, its ruleset's data hook can specify the address of a contract that adheres to the <a href="/v4/api/core/interfaces/IJBCashOutHook.md"><code>IJBCashOutHook</code></a> whose <code>afterCashOutRecordedWith(...)</code> transaction will be called once <a href="/v4/api/core/JBMultiTerminal.md#cashouttokensof"><code>JBMultiTerminal.cashOutTokensOf(...)</code></a> has been executed.</p><p>These can be used by projects to customize what happens when it receives payments and when someone redeems its tokens.</p>[Learn more](/docs/dev/v4/learn/glossary/cash-out-hook.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| **ERC721 reward tiers**      | <p>TLDR: Allows projects to distribute tiered NFTs to contributors, optionally usable for token cash-outs.</p><p>A project can use the tiered ERC721 hook if it wishes to distribute NFTs from any number of tiers to addresses who contribute during a particular set of rulesets. These 721s can optionally then be used for cash outs instead of the standard project tokens. </p>[Learn more](/docs/dev/v4/learn/glossary/721-reward-tiers.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| **Permissions**      | <p>TLDR: Delegated addresses with specific permissions to act on behalf of another address in the Juicebox ecosystem.</p><p>Addresses can give permissions to any other address to take specific actions throughout the Juicebox ecosystem on their behalf. These addresses are called Operators, and are managed through the <a href="/v4/api/core/JBPermissions.md"><code>JBPermissions</code></a> contract.</p>[Learn more](/docs/dev/v4/learn/glossary/permissions.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| **Omnichain**      | <p>TLDR: A project can recieve funds and issue its tokens from any number of blockchains it chooses from the set of eligible ones, currently Ethreum mainnet, Optimism, Arbitrum, and Base.</p><p>Under the hood, a juicebox project is deployed independently on each chain. They can have matching rulesets and payouts, or be totally different. The juicebox projects on the various chains are connected in only one way: token holders on one chain can bridge over to any other chain where the project exists.</p>[Learn more](/docs/dev/v4/learn/glossary/omnichain.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| **Suckers**      | <p>TLDR: A sucker is the component projects use to connect multiple instances of Juiceboxes across chains.</p><p>A sucker is kind of like a bridge, with some special properties that make omnichain Juiceboxes work well together. </p>[Learn more](/docs/dev/v4/learn/glossary/suckers.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| **Hold fees**      | <p>TLDR: The hold fees option allows a project to raise funds, attempt to use the funds, and return the funds if the attempt fails.</p><p>The choice of holding fees is set on a per-ruleset basis. All held fees can be processed after 28 days without paying back withdrawn funds. </p>[Learn more](/docs/dev/v4/learn/glossary/hold-fees.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| **Relayr**      | <p>TLDR: A tool for web clients to use when coordinating a project's ops across blockchains while simplifying wallet signatures and transactions.</p><p> Relayr can be seen on [juicebox.money](https://juicebox.money) and [app.revnet.eth.sucks](https://app.revnet.eth.sucks) when getting a deploy quote and paying for it. </p>[Learn more](/docs/dev/v4/learn/glossary/relayr.md)                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
